# calculate_sha256_from_3_HEAD

./: .gitignore  README.md  pyproject.toml  requirements.txt
scrapper/: main.py
tests/: main_test.py
tests/mock_data/: mock_file
